--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ciar4n/izmir": "^1.0.1",
+    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-js-modal": "^2.0.1",
+    "vue-kinesis": "^1.3.3",
+    "vue-page-transition": "^0.2.2",
+    "vue-sequential-entrance": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
